server/infra/k8s-dev/ingress-depl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: vton.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/customerdata/?(.*)
            pathType: Prefix
            backend:
              service:
                name: customers-srv
                port:
                  number: 3000
          - path: /api/garments/?(.*)
            pathType: Prefix
            backend:
              service:
                name: garments-srv
                port:
                  number: 3000
          - path: /api/cart/?(.*)
            pathType: Prefix
            backend:
              service:
                name: cart-srv
                port:
                  number: 3000
          - path: /api/orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: orders-srv
                port:
                  number: 3000
          - path: /api/payments/?(.*)
            pathType: Prefix
            backend:
              service:
                name: payments-srv
                port:
                  number: 3000
